reduced gallery-item width to correct project overlap at akward resolutions

--- a/static/landing.css
+++ b/static/landing.css
@@ -124,7 +124,7 @@ header {
 .gallery-image {
     border: 3px solid #3882f6;
     border-radius: 10%;
-    width: 300px;
+    width: 250px;
     height: 250px;
 }
 .gallery-text {
